Se modifica el archivo .gitignore

--- a/Git/.gitignore
+++ b/Git/.gitignore
@@ -1,32 +1,39 @@
-### Xcode ###
-build
-*.xcodeproj/*
-!*.xcodeproj/project.pbxproj
-!*.xcworkspace/contents.xcworkspacedata
-
-
-### Objective-C ###
-# OS X
+# Mac OS X Finder
 .DS_Store
 
-# Xcode
-build/
-*.pbxuser
-!default.pbxuser
+# Private Keys
+*.pem
+
+# Xcode legacy
+*.mode1
 *.mode1v3
-!default.mode1v3
 *.mode2v3
-!default.mode2v3
+*.perspective
 *.perspectivev3
-!default.perspectivev3
-xcuserdata
-*.xccheckout
-profile
-*.moved-aside
-DerivedData
-*.hmap
-*.ipa
+*.pbxuser
 
-# CocoaPods
-Pods
+# Xcode
+xcuserdata/
+project.xcworkspace/
+DerivedData/
 
+# build products
+build/
+*.[oa]
+
+# repositories
+.hg
+.svn
+CVS
+
+# automatic backup files
+*~.nib
+*.swp
+*~
+*(Autosaved).rtfd/
+Backup[ ]of[ ]*.pages/
+Backup[ ]of[ ]*.key/
+Backup[ ]of[ ]*.numbers/
+
+# Cocoapods
+Pods/
